--- a/src/Component/Page/Home/Component/ModelSection/ModelSection.css
+++ b/src/Component/Page/Home/Component/ModelSection/ModelSection.css
@@ -6,8 +6,7 @@
     justify-self: center;
     height: 35em;
     max-width: 75em;
-    width: 100%;
-    margin: 0 auto;
+    width: 98%;
     color: white;
     margin-top: 5vh;
     overflow: hidden;
